Replaced local file path with actual HTML content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-file:///C:/Users/User/Desktop/sirajium/sirajium-pitch-deck.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sirajium Pitch Deck</title>
+</head>
+<body>
+    <h1>Sirajium: AI-Powered Lifecycle Management Platform</h1>
+    <p>This is a placeholder for the full Sirajium pitch deck content.</p>
+</body>
+</html>
+
